--- a/index.html
+++ b/index.html
@@ -249,30 +249,11 @@ var pricingtable_ajax = {"pricingtable_ajaxurl":"http:\/\/office.wrzbd.com\/wp-a
 <body class="home page-template-default page page-id-267 wp-custom-logo siteorigin-panels  siteorigin-panels-home full-width wide" style="transform: none;">
 
 
- <!-- .logo -->
-													</div>
-
-						<div class="header-bottom-right-section">
-							
-<nav id="site-navigation" class="main-navigation navigation-default" role="navigation" style="height: auto;">
+<div id="page" class="site" style="transform: none;">
 	
-</nav><!-- #site-navigation -->
+	<a class="skip-link screen-reader-text" href="http://os-o.cn//#content">Skip to content</a>
 
-<div class="header-action-container">
-	
-		
-<div class="navigation-togglers-wrapper">
-	<button class="menu-toggle menu-toggle-mobile" aria-controls="primary-menu" aria-expanded="false"><span class="screen-reader-text">Primary Menu for Mobile</span> <i class="fa fa-bars"></i></button>
-	<button class="menu-toggle menu-toggle-desktop menu-toggle-navigation-default" aria-controls="primary-menu" aria-expanded="false"><span class="screen-reader-text">Primary Menu for Desktop</span> <i class="fa"></i></button>
-</div> <!-- .navigation-togglers-wrapper -->
-</div> <!-- .header-action-container -->
-						</div>
-					</div> <!-- .container -->
-				</div> <!-- .header-bottom -->
-			</div>  <!-- .header-inner-wrapper -->
-		</div> <!-- .header-outer-wrapper -->
-
-			</header><!-- #masthead -->
+<!-- #masthead -->
 
 		<div id="heading">
 			</div>
