--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+	<center><a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=835904729&website=www.oicqzone.com">点我添加QQ</a></center>
 	<br>
 	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><header><center><font size="10">Office/Visio/Project系列</font></center><center><font size="10">（全部正版，假一赔十）</font></center></header></a>
 	<br>
