--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 <head>
@@ -23,11 +22,12 @@
 </head>
 
 <body>
-	<center><a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=835904729&website=www.oicqzone.com">点我添加QQ</a></center>
+	<center><a href="http://wpa.qq.com/msgrd?v=3&uin=835904729&site=qq&menu=yes">点击添加QQ</a></center>
+	<br>
+	<center>虽然网页做的很烂，但是货物是一流的</center>
 	<br>
 	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><header><center><font size="10">Office/Visio/Project系列</font></center><center><font size="10">（全部正版，假一赔十）</font></center></header></a>
 	<br>
 	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><footer><center><font size="10">Windows系列</font></center><center><font size="10">（全部正版，假一赔十）</font></center></footer></a>
 </body>
 </html>
-
