--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	<br>
 	<center>网页做的粗糙，但货物是一流的</center>
 	<br>
-	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><header><center><font size="10">Office/Visio/Project系列</font></center><center><font size="10">（全部正版，假一赔十）</font></center></header></a>
+	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><header><center><font size="10">Office/Visio/Project系列</font></center><center><font size="10">（全部正版，假一赔十）<br>点我获取</font></center></header></a>
 	<br>
-	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><footer><center><font size="10">Windows系列</font></center><center><font size="10">（全部正版，假一赔十）</font></center></footer></a>
+	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><footer><center><font size="10">Windows系列</font></center><center><font size="10">（全部正版，假一赔十）<br>点我获取</font></center></footer></a>
 </body>
 </html>
