--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 <body>
 	<center><a href="http://wpa.qq.com/msgrd?v=3&uin=835904729&site=qq&menu=yes">点击添加QQ（非诚勿扰）</a></center>
 	<br>
-	<center>网页做的粗糙，但货物是一流的</center>
+	<center>虽然网页做的很烂，但是货物是一流的</center>
 	<br>
-	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><header><center><font size="10">Office/Visio/Project系列</font></center><center><font size="10">（全部正版，假一赔十）<br>点我获取</font></center></header></a>
+	<center>打不开的话，关闭所有代理/vpn</center>
 	<br>
-	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><footer><center><font size="10">Windows系列</font></center><center><font size="10">（全部正版，假一赔十）<br>点我获取</font></center></footer></a>
+	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><header><center><font size="10">Office/Visio/Project系列</font></center><center><font size="10">（全部正版，假一赔十）<br>点我购买</font></center></header></a>
+	<br>
+	<a href="https://www.anfaka.com/s/orange" style="text-decoration: none;"><footer><center><font size="10">Windows系列</font></center><center><font size="10">（全部正版，假一赔十）<br>点我购买</font></center></footer></a>
 </body>
 </html>
