--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<center><a href="http://wpa.qq.com/msgrd?v=3&uin=835904729&site=qq&menu=yes">点击添加QQ（非诚勿扰）</a></center>
+	<center><a href="http://wpa.qq.com/msgrd?v=3&uin=835904729&site=qq&menu=yes">点击添加QQ（欢迎骚扰）</a></center>
 	<br>
 	<center>虽然网页做的很烂，但是货物是一流的</center>
 	<br>
