--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 	<center><a href="http://wpa.qq.com/msgrd?v=3&uin=835904729&site=qq&menu=yes">点击添加QQ（欢迎骚扰）</a></center>
 	<br>
-	<center>虽然网页做的很烂，但是货物是一流的</center>
+	<center>虽然网页做的比较简陋，但货物是一流的</center>
 	<br>
 	<center>打不开的话，关闭所有代理/vpn</center>
 	<br>
